[workspace]
resolver = "3"
members = ["src/meloncraft_network", "src/meloncraft_packets", "src/meloncraft_protocol_types", "src/meloncraft_client", "src/meloncraft_handshaking", "src/meloncraft_server_list", "src/meloncraft_player", "src/meloncraft_nbt", "src/meloncraft_login", "src/meloncraft_registry", "src/meloncraft_core", "src/meloncraft_text", "src/meloncraft_default_registries", "src/meloncraft_generator", "src/meloncraft_chunk", "tools/block_state_generator", "src/meloncraft_block"]
exclude = [
    "examples"
]

[workspace.dependencies.bevy]
version = "0.17.3"
default-features = false
features = ["debug"]

[package]
name = "meloncraft"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
meloncraft_protocol_types = { path = "src/meloncraft_protocol_types" }
meloncraft_network = { path = "src/meloncraft_network" }
meloncraft_client = { path = "src/meloncraft_client" }
meloncraft_packets = { path = "src/meloncraft_packets" }
meloncraft_handshaking = { path = "src/meloncraft_handshaking" }
meloncraft_server_list = { path = "src/meloncraft_server_list" }
meloncraft_player = { path = "src/meloncraft_player" }
meloncraft_nbt = { path = "src/meloncraft_nbt" }
meloncraft_login = { path = "src/meloncraft_login" }
meloncraft_init_play = { path = "src/meloncraft_init_play" }
meloncraft_registry = { path = "src/meloncraft_registry" }
meloncraft_default_registries = { path = "src/meloncraft_default_registries" }
meloncraft_core = { path = "src/meloncraft_core" }
meloncraft_text = { path = "src/meloncraft_text" }
meloncraft_generator = { path = "src/meloncraft_generator" }
meloncraft_block = { path = "src/meloncraft_block" }
meloncraft_chunk = { path = "src/meloncraft_chunk" }

lazy_static = "1.5.0"

[dependencies]
meloncraft_protocol_types = { workspace = true }
meloncraft_network = { workspace = true }
meloncraft_client = { workspace = true }
meloncraft_packets = { workspace = true }
meloncraft_handshaking = { workspace = true }
meloncraft_server_list = { workspace = true }
meloncraft_player = { workspace = true }
meloncraft_nbt = { workspace = true }
meloncraft_login = { workspace = true }
meloncraft_init_play = { workspace = true }
meloncraft_registry = { workspace = true }
meloncraft_default_registries = { workspace = true }
meloncraft_core = { workspace = true }
meloncraft_text = { workspace = true }
#meloncraft_generator = { workspace = true }
meloncraft_block = { workspace = true }
meloncraft_chunk = { workspace = true }

[workspace.lints.clippy]

# Cargo lints:
cargo_common_metadata = "allow" # When ready to release, will be forbidden
multiple_crate_versions = "allow" # Meloncraft has two dependencies: bevy and lazy_static, which require different versions of certain crates. Unavoidable for now.
negative_feature_names = "forbid"
redundant_feature_names = "forbid"
wildcard_dependencies = "forbid"

# Complexity lints:
bind_instead_of_map = "forbid"
bool_comparison = "forbid"
borrow_deref_ref = "forbid"
borrowed_box = "forbid"
bytes_count_to_len = "forbid"
char_lit_as_u8 = "forbid"
clone_on_copy = "forbid"
default_constructed_unit_structs = "forbid"
deprecated_cfg_attr = "forbid"
deref_addrof = "forbid"
derivable_impls = "allow" # In some cases I prefer the explicitness of writing out an impl, e.g. in a Default impl when we may want to add non-default fields in the future.
diverging_sub_expression = "forbid"
double_comparisons = "forbid"
double_parens = "forbid"
duration_subsec = "forbid"
excessive_nesting = "forbid"
explicit_auto_deref = "forbid"
explicit_counter_loop = "forbid"
explicit_write = "forbid"
extra_unused_lifetimes = "forbid"
extra_unused_type_parameters = "forbid"
filter_map_identity = "forbid"
filter_next = "forbid"
flat_map_identity = "forbid"
get_last_with_len = "forbid"
identity_op = "forbid"
implied_bounds_in_impls = "forbid"
inspect_for_each = "forbid"
int_plus_one = "forbid"
iter_count = "forbid"
iter_kv_map = "forbid"
let_with_type_underscore = "forbid"
manual_abs_diff = "forbid"
manual_c_str_literals = "forbid"
manual_checked_ops = "forbid"
manual_clamp = "forbid"
manual_div_ceil = "forbid"
manual_filter = "forbid"
manual_filter_map = "forbid"
manual_find = "forbid"
manual_find_map = "forbid"
manual_flatten = "forbid"
manual_hash_one = "forbid"
manual_inspect = "forbid"
manual_is_multiple_of = "forbid"
manual_main_separator_str = "forbid"
manual_ok_err = "forbid"
manual_option_as_slice = "forbid"
manual_range_patterns = "forbid"
manual_rem_euclid = "forbid"
manual_slice_size_calculation = "forbid"
manual_split_once = "forbid"
manual_strip = "forbid"
manual_swap = "forbid"
manual_take = "forbid"
manual_unwrap_or = "forbid"
map_all_any_identity = "forbid"
map_flatten = "forbid"
map_identity = "forbid"
match_as_ref = "forbid"
match_single_binding = "forbid"
needless_arbitrary_self_type = "forbid"
needless_as_bytes = "forbid"
needless_bool = "forbid"
needless_bool_assign = "forbid"
needless_borrowed_reference = "forbid"
needless_ifs = "forbid"
needless_lifetimes = "forbid"
needless_match = "forbid"
needless_option_as_deref = "forbid"
needless_option_take = "forbid"
needless_question_mark = "forbid"
needless_splitn = "forbid"
needless_update = "forbid"
neg_cmp_op_on_partial_ord = "forbid"
no_effect = "forbid"
only_used_in_recursion = "forbid"
option_as_ref_deref = "forbid"
option_filter_map = "forbid"
option_map_unit_fn = "forbid"
or_then_unwrap = "forbid"
partialeq_ne_impl = "forbid"
precedence = "forbid"
ptr_offset_with_cast = "forbid"
range_zip_with_len = "forbid"
redundant_as_str = "forbid"
redundant_async_block = "forbid"
redundant_at_rest_pattern = "forbid"
redundant_closure_call = "forbid"
redundant_guards = "forbid"
redundant_slicing = "forbid"
repeat_once = "forbid"
reserve_after_initialization = "forbid"
result_filter_map = "forbid"
result_map_unit_fn = "forbid"
seek_from_current = "forbid"
seek_to_start_instead_of_rewind = "forbid"
short_circuit_statement = "forbid"
single_element_loop = "forbid"
skip_while_next = "forbid"
string_from_utf8_as_bytes = "forbid"
strlen_on_c_strings = "forbid"
swap_with_temporary = "forbid"
temporary_assignment = "forbid"
too_many_arguments = "forbid"
transmute_bytes_to_str = "forbid"
transmute_int_to_bool = "forbid"
transmute_int_to_non_zero = "forbid"
transmute_ptr_to_ref = "forbid"
transmutes_expressible_as_ptr_casts = "forbid"
type_complexity = "forbid"
unit_arg = "forbid"
unnecessary_cast = "forbid"
unnecessary_filter_map = "forbid"
unnecessary_find_map = "forbid"
unnecessary_first_then_check = "forbid"
unnecessary_literal_unwrap = "forbid"
unnecessary_map_on_constructor = "forbid"
unnecessary_min_or_max = "forbid"
unnecessary_operation = "forbid"
unnecessary_sort_by = "forbid"
unnecessary_unwrap = "forbid"
unneeded_wildcard_pattern = "forbid"
unused_format_specs = "forbid"
useless_asref = "forbid"
useless_concat = "forbid"
useless_conversion = "forbid"
useless_format = "forbid"
useless_nonzero_new_unchecked = "forbid"
useless_transmute = "forbid"
vec_box = "forbid"
while_let_loop = "forbid"
wildcard_in_or_patterns = "forbid"
zero_divided_by_zero = "forbid"
zero_prefixed_literal = "forbid"

# Correctness lints:
absurd_extreme_comparisons = "forbid"
almost_swapped = "forbid"
approx_constant = "forbid"
async_yields_async = "forbid"
bad_bit_mask = "forbid"
cast_slice_different_sizes = "forbid"
char_indices_as_byte_indices = "forbid"
deprecated_semver = "forbid"
derive_ord_xor_partial_ord = "forbid"
derived_hash_with_manual_eq = "forbid"
eager_transmute = "forbid"
enum_clike_unportable_variant = "forbid"
eq_op = "forbid"
erasing_op = "forbid"
if_let_mutex = "forbid"
ifs_same_cond = "forbid"
impl_hash_borrow_with_str_and_bytes = "forbid"
impossible_comparisons = "forbid"
ineffective_bit_mask = "forbid"
infinite_iter = "forbid"
inherent_to_string_shadow_display = "forbid"
inline_fn_without_body = "forbid"
invalid_regex = "forbid"
inverted_saturating_sub = "forbid"
invisible_characters = "forbid"
iter_next_loop = "forbid"
iter_skip_zero = "forbid"
iterator_step_by_zero = "forbid"
let_underscore_lock = "forbid"
lint_groups_priority = "forbid"
match_str_case_mismatch = "forbid"
mem_replace_with_uninit = "forbid"
min_max = "forbid"
mistyped_literal_suffixes = "forbid"
modulo_one = "forbid"
mut_from_ref = "forbid"
never_loop = "forbid"
non_octal_unix_permissions = "forbid"
nonsensical_open_options = "forbid"
not_unsafe_ptr_arg_deref = "forbid"
option_env_unwrap = "forbid"
out_of_bounds_indexing = "forbid"
panicking_overflow_checks = "forbid"
panicking_unwrap = "forbid"
possible_missing_comma = "forbid"
read_line_without_trim = "forbid"
recursive_format_impl = "forbid"
redundant_comparisons = "forbid"
reversed_empty_ranges = "forbid"
self_assignment = "forbid"
serde_api_misuse = "forbid"
size_of_in_element_count = "forbid"
suspicious_splitn = "forbid"
transmute_null_to_fn = "forbid"
transmuting_null = "forbid"
uninit_assumed_init = "forbid"
uninit_vec = "forbid"
unit_cmp = "forbid"
unit_hash = "forbid"
unit_return_expecting_ord = "forbid"
unsound_collection_transmute = "forbid"
unused_io_amount = "forbid"
useless_attribute = "forbid"
vec_resize_to_zero = "forbid"
while_immutable_condition = "forbid"
wrong_transmute = "forbid"
zst_offset = "forbid"

# Nursery lints:
as_ptr_cast_mut = "forbid"
branches_sharing_code = "forbid"
clear_with_drain = "forbid"
coerce_container_to_any = "forbid"
collection_is_never_read = "forbid"
debug_assert_with_mut_call = "forbid"
derive_partial_eq_without_eq = "forbid"
doc_link_code = "forbid"
equatable_if_let = "forbid"
fallible_impl_from = "deny" # In some cases, unwraps/panics are safe in a From impl.
future_not_send = "forbid"
imprecise_flops = "forbid"
iter_on_empty_collections = "forbid"
iter_on_single_items = "forbid"
iter_with_drain = "forbid"
large_stack_frames = "forbid"
literal_string_with_formatting_args = "forbid"
missing_const_for_fn = "forbid"
needless_collect = "forbid"
needless_pass_by_ref_mut = "forbid"
needless_type_cast = "forbid"
non_send_fields_in_send_ty = "forbid"
nonstandard_macro_braces = "forbid"
option_if_let_else = "forbid"
or_fun_call = "forbid"
path_buf_push_overwrite = "forbid"
read_zero_byte_vec = "forbid"
redundant_clone = "forbid"
redundant_pub_crate = "forbid"
search_is_some = "forbid"
set_contains_or_insert = "forbid"
significant_drop_in_scrutinee = "forbid"
significant_drop_tightening = "forbid"
single_option_map = "forbid"
string_lit_as_bytes = "forbid"
suboptimal_flops = "forbid"
suspicious_operation_groupings = "forbid"
too_long_first_doc_paragraph = "forbid"
trailing_empty_array = "forbid"
trait_duplication_in_bounds = "forbid"
transmute_undefined_repr = "forbid"
trivial_regex = "forbid"
tuple_array_conversions = "forbid"
type_repetition_in_bounds = "forbid"
uninhabited_references = "forbid"
unnecessary_struct_initialization = "forbid"
unused_peekable = "forbid"
unused_rounding = "forbid"
use_self = "allow" # Prefer using the structd name for clarity
useless_let_if_seq = "forbid"
volatile_composites = "forbid"
while_float = "forbid"

# Pedantic lints:
assigning_clones = "forbid"
bool_to_int_with_if = "forbid"
borrow_as_ptr = "forbid"
case_sensitive_file_extension_comparisons = "forbid"
cast_lossless = "forbid"
cast_possible_truncation = "deny" # Should almost never be used unless there is literally no other way of solving a problem. Avoid the X-Y problem with this.
cast_possible_wrap = "forbid"
cast_precision_loss = "forbid"
cast_ptr_alignment = "forbid"
cast_sign_loss = "forbid"
checked_conversions = "forbid"
cloned_instead_of_copied = "forbid"
collapsible_else_if = "forbid"
comparison_chain = "forbid"
copy_iterator = "forbid"
decimal_bitwise_operands = "forbid"
default_trait_access = "forbid"
doc_broken_link = "forbid"
doc_comment_double_space_linebreaks = "forbid"
doc_link_with_quotes = "forbid"
doc_markdown = "forbid"
duration_suboptimal_units = "forbid"
elidable_lifetime_names = "forbid"
empty_enums = "forbid"
enum_glob_use = "forbid"
expl_impl_clone_on_copy = "forbid"
explicit_deref_methods = "forbid"
explicit_into_iter_loop = "forbid"
explicit_iter_loop = "forbid"
filter_map_next = "forbid"
flat_map_option = "forbid"
float_cmp = "forbid"
fn_params_excessive_bools = "forbid"
format_collect = "forbid"
format_push_string = "forbid"
from_iter_instead_of_collect = "forbid"
if_not_else = "forbid"
ignore_without_reason = "forbid"
ignored_unit_patterns = "forbid"
implicit_clone = "forbid"
implicit_hasher = "forbid"
inconsistent_struct_constructor = "forbid"
index_refutable_slice = "forbid"
inefficient_to_string = "forbid"
inline_always = "forbid"
into_iter_without_iter = "forbid"
invalid_upcast_comparisons = "forbid"
ip_constant = "forbid"
items_after_statements = "forbid"
iter_filter_is_ok = "forbid"
iter_filter_is_some = "forbid"
iter_not_returning_iterator = "forbid"
iter_without_into_iter = "forbid"
large_digit_groups = "forbid"
large_futures = "forbid"
large_stack_arrays = "forbid"
large_types_passed_by_value = "forbid"
linkedlist = "forbid"
macro_use_imports = "forbid"
manual_assert = "forbid"
manual_ilog2 = "forbid"
manual_instant_elapsed = "forbid"
manual_is_power_of_two = "forbid"
manual_is_variant_and = "forbid"
manual_let_else = "forbid"
manual_midpoint = "forbid"
manual_string_new = "forbid"
many_single_char_names = "forbid"
map_unwrap_or = "forbid"
match_bool = "forbid"
match_same_arms = "forbid"
match_wild_err_arm = "forbid"
match_wildcard_for_single_variants = "forbid"
maybe_infinite_iter = "forbid"
mismatching_type_param_order = "forbid"
missing_fields_in_debug = "forbid"
must_use_candidate = "forbid"
mut_mut = "forbid"
naive_bytecount = "forbid"
needless_bitwise_bool = "forbid"
needless_continue = "forbid"
needless_for_each = "forbid"
needless_pass_by_value = "allow" # Unfortunately, Bevy `Res` needs to be taken as a value in a parameter, so this needs to be allowed in some crates for now.
needless_raw_string_hashes = "forbid"
no_effect_underscore_binding = "forbid"
no_mangle_with_rust_abi = "forbid"
non_std_lazy_statics = "deny" # We use lazy_static! for storing the network packet buffers. These will be replaced with standard library types very soon, and this lint will then be forbidden. **Must not be manually expected in any future code**.
nonminimal_bool = "forbid"
option_as_ref_cloned = "forbid"
option_option = "forbid"
overly_complex_bool_expr = "forbid"
ptr_as_ptr = "forbid"
ptr_cast_constness = "forbid"
ptr_offset_by_literal = "forbid"
pub_underscore_fields = "forbid"
range_minus_one = "forbid"
range_plus_one = "forbid"
redundant_closure_for_method_calls = "forbid"
redundant_else = "forbid"
ref_as_ptr = "forbid"
ref_binding_to_reference = "forbid"
ref_option = "forbid"
ref_option_ref = "forbid"
return_self_not_must_use = "forbid"
same_functions_in_if_condition = "forbid"
same_length_and_capacity = "forbid"
self_only_used_in_recursion = "forbid"
semicolon_if_nothing_returned = "forbid"
should_panic_without_expect = "forbid"
similar_names = "allow" # Many cases where names should be similar, e.g. `pr` and `pw` in packet readers/writers.
single_char_pattern = "forbid"
single_match_else = "forbid"
stable_sort_primitive = "forbid"
str_split_at_newline = "forbid"
string_add_assign = "forbid"
struct_excessive_bools = "warn" # This is only bad if it can be replaced with an enum.
struct_field_names = "forbid"
too_many_lines = "forbid"
transmute_ptr_to_ptr = "forbid"
trivially_copy_pass_by_ref = "forbid"
unchecked_time_subtraction = "forbid"
unicode_not_nfc = "forbid"
uninlined_format_args = "forbid"
unnecessary_box_returns = "forbid"
unnecessary_debug_formatting = "forbid"
unnecessary_join = "forbid"
unnecessary_literal_bound = "forbid"
unnecessary_semicolon = "forbid"
unnecessary_trailing_comma = "forbid"
unnecessary_wraps = "forbid"
unnested_or_patterns = "forbid"
unreadable_literal = "forbid"
unsafe_derive_deserialize = "forbid"
unused_async = "forbid"
unused_self = "forbid"
used_underscore_binding = "forbid"
used_underscore_items = "forbid"
verbose_bit_mask = "forbid"
wildcard_imports = "forbid"
zero_sized_map_values = "forbid"

# Performance lints
box_collection = "forbid"
boxed_local = "forbid"
cloned_ref_to_slice_refs = "forbid"
cmp_owned = "forbid"
collapsible_str_replace = "forbid"
double_ended_iterator_last = "forbid"
drain_collect = "forbid"
expect_fun_call = "forbid"
extend_with_drain = "forbid"
format_in_format_args = "forbid"
iter_overeager_cloned = "forbid"
large_const_arrays = "forbid"
large_enum_variant = "forbid"
manual_contains = "forbid"
manual_ignore_case_cmp = "forbid"
manual_memcpy = "forbid"
manual_retain = "forbid"
manual_str_repeat = "forbid"
manual_try_fold = "forbid"
map_entry = "forbid"
missing_const_for_thread_local = "forbid"
missing_spin_loop = "forbid"
readonly_write_lock = "forbid"
redundant_allocation = "forbid"
redundant_iter_cloned = "forbid"
regex_creation_in_loops = "forbid"
replace_box = "forbid"
result_large_err = "forbid"
sliced_string_as_bytes = "forbid"
slow_vector_initialization = "forbid"
to_string_in_format_args = "forbid"
unbuffered_bytes = "forbid"
unnecessary_to_owned = "forbid"
useless_vec = "forbid"
vec_init_then_push = "forbid"
waker_clone_wake = "forbid"

# Restriction lints
absolute_paths = "forbid"
alloc_instead_of_core = "forbid"
allow_attributes = "forbid"
allow_attributes_without_reason = "forbid"
arbitrary_source_item_ordering = "allow" # We really don't care about the order of fields in a struct, for example. It's often better for them to be packed together for performance, or to match the protocol.
arithmetic_side_effects = "allow" # I don't think we need Clippy telling us `3+4` is dangerous...
as_conversions = "deny" # There are some cases when as conversions are necessary. But they should be avoided at all costs.
as_pointer_underscore = "forbid"
as_underscore = "forbid"
assertions_on_result_states = "forbid"
big_endian_bytes = "allow" # We are working with a network protocol, so big-endian byte order is needed.
cfg_not_test = "forbid"
clone_on_ref_ptr = "forbid"
cognitive_complexity = "forbid"
create_dir = "forbid"
dbg_macro = "forbid"
decimal_literal_representation = "forbid"
default_numeric_fallback = "allow" # `7` is perfectly fine instead of `7_i32`, same with `3.5` instead of `3.5_f32`. Either should be acceptable.
default_union_representation = "forbid"
deref_by_slicing = "forbid"
disallowed_script_idents = "forbid"
doc_include_without_cfg = "forbid"
doc_paragraphs_missing_punctuation = "forbid"
else_if_without_else = "forbid"
empty_drop = "forbid"
empty_enum_variants_with_brackets = "forbid"
empty_structs_with_brackets = "forbid"
error_impl_error = "forbid"
exhaustive_enums = "allow" # Library users should be able to construct enums, even if they may later change, we can't achieve non-breaking changes just by stopping people from doing basic things.
exhaustive_structs = "allow" # Library users should be able to construct structs, even if they may later change, we can't achieve non-breaking changes just by stopping people from doing basic things.
exit = "forbid"
expect_used = "forbid"
field_scoped_visibility_modifiers = "forbid"
filetype_is_file = "forbid"
float_arithmetic = "allow" # Floating point arithmetic is fine, Meloncraft won't run anywhere where it will cause particular performance issues, and we need floats for game logic.
float_cmp_const = "forbid"
fn_to_numeric_cast_any = "forbid"
get_unwrap = "allow" # All code which can panic should explicitly call a panicking function, like `unwrap` or `panic!`. This makes it easier to audit the codebase for potential panics, and makes it clearer when reading the code that a panic may occur.
host_endian_bytes = "forbid"
if_then_some_else_none = "forbid"
impl_trait_in_params = "forbid"
implicit_return = "forbid"
indexing_slicing = "deny" # The only time index slicing is acceptable is when assigning to an element in a collection, e.g. `vec[0] = 5`. Otherwise, it is too easy to accidentally cause panics by indexing out of bounds, and you should use vec.get(0) (and unwrap if you are sure the index is valid). Don't use slicing.
infinite_loop = "forbid"
inline_asm_x86_att_syntax = "forbid"
inline_asm_x86_intel_syntax = "forbid"
integer_division = "allow"
integer_division_remainder_used = "allow"
iter_over_hash_type = "warn" # This can be perfectly fine, but it's worth warning about since sometimes you need to iterate over an **ordered** collection, but accidentally iterate over a HashMap or HashSet, etc.
large_include_file = "forbid"
let_underscore_must_use = "forbid"
let_underscore_untyped = "forbid"
little_endian_bytes = "forbid"
lossy_float_literal = "forbid"
map_err_ignore = "allow" # This will be forbidden upon changing net_deserialize to return the error, not just Result<Self, ()>. Until then, this is banned in future code but allowed in existing code.
map_with_unused_argument_over_ranges = "forbid"
mem_forget = "forbid"
min_ident_chars = "allow" # Short identifiers can sometimes be fine (e.g. x,y, r,g,b, pr,pw), but are discouraged.
missing_assert_message = "forbid"
missing_asserts_for_indexing = "forbid"
missing_inline_in_public_items = "allow"
missing_trait_methods = "allow" # If a trait method is provided by default, there's no reason to require it to be manually implemented in all derivatives.
mixed_read_write_in_expression = "forbid"
mod_module_files = "allow" # mod.rs files are the preferred way to structure modules which contain submodules.
module_name_repetitions = "allow" # It is preferred to repeat a module's name in a struct/enum declaration, if it improves clarity - as the structure's purpose must be clear from just its name, not its module path.
modulo_arithmetic = "forbid"
multiple_inherent_impl = "forbid"
multiple_unsafe_ops_per_block = "forbid"
mutex_atomic = "forbid"
mutex_integer = "forbid"
needless_raw_strings = "forbid"
non_ascii_literal = "forbid"
non_zero_suggestions = "forbid"
panic = "forbid"
panic_in_result_fn = "forbid"
partial_pub_fields = "forbid"
pathbuf_init_then_push = "forbid"
pattern_type_mismatch = "allow" # It would be better to forbid this, but it makes some pattern matching more difficult (we have to write loads of &s) and just doesn't add much benefit.
pointer_format = "forbid"
precedence_bits = "forbid"
print_stderr = "allow" # We'll implement meloncraft_logger eventually. For now, println! is fine.
print_stdout = "allow" # eprintln! works for now, as explained above ^^
pub_use = "allow" # public re-exports like this are perfectly fine, and more concise anyway.
pub_with_shorthand = "forbid"
pub_without_shorthand = "forbid"
question_mark_used = "allow" # However the ? operator is strongly discouraged: it makes it easy to ignore errors and send them to the sender. It may be forbidden soon.
rc_buffer = "forbid"
rc_mutex = "forbid"
redundant_test_prefix = "forbid"
redundant_type_annotations = "warn"
ref_patterns = "forbid"
renamed_function_params = "forbid"
rest_pat_in_fully_bound_structs = "forbid"
return_and_then = "forbid"
same_name_method = "forbid"
self_named_module_files = "forbid"
semicolon_inside_block = "allow"
semicolon_outside_block = "forbid"
separated_literal_suffix = "allow" # 0_i32 is more readable than 0i32.
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "forbid"
std_instead_of_core = "forbid"
str_to_string = "forbid"
string_add = "forbid"
string_lit_chars_any = "forbid"
string_slice = "forbid"
suspicious_xor_used_as_pow = "forbid"
tests_outside_test_module = "forbid"
todo = "allow" # For now. Meloncraft is still *far* from in production.
try_err = "forbid"
undocumented_unsafe_blocks = "forbid"
unimplemented = "forbid"
unnecessary_safety_comment = "allow"
unnecessary_safety_doc = "forbid"
unnecessary_self_imports = "forbid"
unneeded_field_pattern = "forbid"
unreachable = "forbid"
unseparated_literal_suffix = "forbid"
unused_result_ok = "forbid"
unused_trait_names = "forbid"
unwrap_in_result = "allow" # Unwraps in results can be fine, but they mean "I am fairly sure this will be valid state", or "the caller of this function is not responsible for handling this error, so I am temporarily ignoring it".
unwrap_used = "allow" # When more stable, unwrap will be 'warn'.
use_debug = "forbid"
verbose_file_reads = "forbid"
wildcard_enum_match_arm = "warn" # Often can be fine, but should be avoided if it's possible / feasable to handle all cases, since it can lead to accidentally ignoring new cases when they are added.

# Style lints
assertions_on_constants = "forbid"
assign_op_pattern = "forbid"
blocks_in_conditions = "forbid"
bool_assert_comparison = "forbid"
borrow_interior_mutable_const = "forbid"
box_default = "forbid"
builtin_type_shadow = "forbid"
byte_char_slices = "forbid"
bytes_nth = "forbid"
chars_last_cmp = "forbid"
chars_next_cmp = "forbid"
cmp_null = "forbid"
collapsible_if = "forbid"
collapsible_match = "forbid"
comparison_to_empty = "forbid"
default_instead_of_iter_empty = "forbid"
disallowed_fields = "forbid"
disallowed_macros = "forbid"
disallowed_methods = "forbid"
disallowed_names = "forbid"
disallowed_types = "forbid"
doc_lazy_continuation = "forbid"
doc_overindented_list_items = "forbid"
double_must_use = "forbid"
duplicate_underscore_argument = "forbid"
enum_variant_names = "forbid"
err_expect = "forbid"
excessive_precision = "forbid"
field_reassign_with_default = "forbid"
filter_map_bool_then = "forbid"
fn_to_numeric_cast = "forbid"
fn_to_numeric_cast_with_truncation = "forbid"
for_kv_map = "forbid"
from_over_into = "forbid"
from_str_radix_10 = "forbid"
get_first = "forbid"
if_same_then_else = "forbid"
implicit_saturating_add = "forbid"
implicit_saturating_sub = "forbid"
inconsistent_digit_grouping = "forbid"
infallible_destructuring_match = "forbid"
inherent_to_string = "forbid"
init_numbered_fields = "forbid"
into_iter_on_ref = "forbid"
io_other_error = "forbid"
is_digit_ascii_radix = "forbid"
items_after_test_module = "forbid"
iter_cloned_collect = "forbid"
iter_next_slice = "forbid"
iter_nth = "forbid"
iter_nth_zero = "forbid"
iter_skip_next = "forbid"
just_underscores_and_digits = "forbid"
legacy_numeric_constants = "forbid"
len_without_is_empty = "forbid"
len_zero = "forbid"
let_and_return = "forbid"
let_unit_value = "forbid"
main_recursion = "forbid"
manual_async_fn = "forbid"
manual_bits = "forbid"
manual_dangling_ptr = "forbid"
manual_is_ascii_check = "forbid"
manual_is_finite = "forbid"
manual_is_infinite = "forbid"
manual_map = "forbid"
manual_next_back = "forbid"
manual_non_exhaustive = "forbid"
manual_ok_or = "forbid"
manual_pattern_char_comparison = "forbid"
manual_range_contains = "forbid"
manual_repeat_n = "forbid"
manual_rotate = "forbid"
manual_saturating_arithmetic = "forbid"
manual_slice_fill = "forbid"
manual_while_let_some = "forbid"
map_clone = "forbid"
map_collect_result_unit = "forbid"
match_like_matches_macro = "forbid"
match_overlapping_arm = "forbid"
match_ref_pats = "forbid"
match_result_ok = "forbid"
mem_replace_option_with_none = "forbid"
mem_replace_option_with_some = "forbid"
mem_replace_with_default = "forbid"
missing_enforced_import_renames = "forbid"
missing_safety_doc = "forbid"
mixed_attributes_style = "forbid"
mixed_case_hex_literals = "forbid"
module_inception = "forbid"
multiple_bound_locations = "forbid"
must_use_unit = "forbid"
mut_mutex_lock = "forbid"
needless_borrow = "forbid"
needless_borrows_for_generic_args = "forbid"
needless_doctest_main = "forbid"
needless_else = "forbid"
needless_late_init = "forbid"
needless_parens_on_range_literals = "forbid"
needless_pub_self = "forbid"
needless_range_loop = "forbid"
needless_return = "allow" # Meloncraft prefers explicit return statements, even when they are not needed, for clarity and to make the codebase simpler to read. Explicit returns always return a value from the current function: implicit returns may just return from the current block.
needless_return_with_question_mark = "forbid"
neg_multiply = "forbid"
new_ret_no_self = "forbid"
new_without_default = "forbid"
non_minimal_cfg = "forbid"
obfuscated_if_else = "forbid"
ok_expect = "forbid"
op_ref = "forbid"
option_map_or_none = "forbid"
owned_cow = "forbid"
partialeq_to_none = "forbid"
print_literal = "forbid"
print_with_newline = "forbid"
println_empty_string = "forbid"
ptr_arg = "forbid"
ptr_eq = "forbid"
question_mark = "forbid"
redundant_closure = "forbid"
redundant_field_names = "forbid"
redundant_pattern = "forbid"
redundant_pattern_matching = "forbid"
redundant_static_lifetimes = "forbid"
result_map_or_into_option = "forbid"
result_unit_err = "deny" # Currently needed for ProtocolType::net_deserialize(): likely to be forbidden in the future.
same_item_push = "forbid"
self_named_constructors = "forbid"
should_implement_trait = "forbid"
single_char_add_str = "forbid"
single_component_path_imports = "forbid"
single_match = "forbid"
string_extend_chars = "forbid"
tabs_in_doc_comments = "forbid"
to_digit_is_some = "forbid"
to_string_trait_impl = "forbid"
toplevel_ref_arg = "forbid"
trim_split_whitespace = "forbid"
unnecessary_fallible_conversions = "forbid"
unnecessary_fold = "forbid"
unnecessary_lazy_evaluations = "forbid"
unnecessary_map_or = "forbid"
unnecessary_mut_passed = "forbid"
unnecessary_owned_empty_strings = "forbid"
unneeded_struct_pattern = "forbid"
unsafe_removed_from_name = "forbid"
unused_enumerate_index = "forbid"
unused_unit = "forbid"
unusual_byte_groupings = "forbid"
unwrap_or_default = "forbid"
upper_case_acronyms = "forbid"
while_let_on_iterator = "forbid"
write_literal = "forbid"
write_with_newline = "forbid"
writeln_empty_string = "forbid"
wrong_self_convention = "forbid"
zero_ptr = "forbid"

# Suspicious lints
almost_complete_range = "forbid"
arc_with_non_send_sync = "forbid"
await_holding_invalid_type = "forbid"
await_holding_lock = "forbid"
await_holding_refcell_ref = "forbid"
blanket_clippy_restriction_lints = "forbid"
cast_abs_to_unsigned = "forbid"
cast_enum_constructor = "forbid"
cast_enum_truncation = "forbid"
cast_nan_to_int = "forbid"
cast_slice_from_raw_parts = "forbid"
confusing_method_to_numeric_cast = "forbid"
const_is_empty = "forbid"
crate_in_macro_def = "forbid"
crosspointer_transmute = "forbid"
declare_interior_mutable_const = "forbid"
deprecated_clippy_cfg_attr = "forbid"
doc_nested_refdefs = "forbid"
doc_suspicious_footnotes = "forbid"
drop_non_drop = "forbid"
duplicate_mod = "forbid"
duplicated_attributes = "forbid"
empty_docs = "forbid"
empty_line_after_doc_comments = "forbid"
empty_line_after_outer_attr = "forbid"
empty_loop = "forbid"
float_equality_without_abs = "forbid"
forget_non_drop = "forbid"
four_forward_slashes = "forbid"
from_raw_with_void_ptr = "forbid"
incompatible_msrv = "forbid"
ineffective_open_options = "forbid"
infallible_try_from = "forbid"
iter_out_of_bounds = "forbid"
join_absolute_paths = "forbid"
let_underscore_future = "forbid"
lines_filter_map_ok = "forbid"
macro_metavars_in_unsafe = "forbid"
manual_unwrap_or_default = "forbid"
misnamed_getters = "forbid"
misrefactored_assign_op = "forbid"
missing_transmute_annotations = "forbid"
multi_assignments = "forbid"
mut_range_bound = "forbid"
mutable_key_type = "forbid"
needless_character_iteration = "forbid"
needless_maybe_sized = "forbid"
no_effect_replace = "forbid"
non_canonical_clone_impl = "forbid"
non_canonical_partial_ord_impl = "forbid"
octal_escapes = "forbid"
path_ends_with_ext = "forbid"
permissions_set_readonly_false = "forbid"
pointers_in_nomem_asm_block = "forbid"
possible_missing_else = "forbid"
print_in_format_impl = "forbid"
rc_clone_in_vec_init = "forbid"
redundant_locals = "forbid"
repeat_vec_with_capacity = "forbid"
repr_packed_without_abi = "forbid"
single_range_in_vec_init = "forbid"
size_of_ref = "forbid"
suspicious_arithmetic_impl = "forbid"
suspicious_assignment_formatting = "forbid"
suspicious_command_arg_space = "forbid"
suspicious_doc_comments = "forbid"
suspicious_else_formatting = "forbid"
suspicious_map = "forbid"
suspicious_op_assign_impl = "forbid"
suspicious_open_options = "forbid"
suspicious_to_owned = "forbid"
suspicious_unary_op_formatting = "forbid"
swap_ptr_to_ref = "forbid"
test_attr_in_doctest = "forbid"
type_id_on_box = "forbid"
unconditional_recursion = "forbid"
unnecessary_clippy_cfg = "forbid"
unnecessary_get_then_check = "forbid"
unnecessary_option_map_or_else = "forbid"
unnecessary_result_map_or_else = "forbid"
zero_repeat_side_effects = "forbid"
zombie_processes = "forbid"

# Documentation lints
missing_panics_doc = "allow"
missing_errors_doc = "allow"
missing_docs_in_private_items = "allow"

