[package]
name = "meloncraft_generator"
version = "0.1.0"
edition = "2024"

[dependencies.reqwest]
version = "0.13.1"
default-features = false
features = ["blocking"]

[dependencies]
meloncraft_nbt = { workspace = true }
meloncraft_protocol_types = { workspace = true }
zip = "7.0.0"
serde_json = "0.9.10"

