[package]
name = "meloncraft_packets"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
meloncraft_core = { workspace = true }
meloncraft_client = { workspace = true }
meloncraft_player = { workspace = true }
meloncraft_network = { workspace = true }
meloncraft_protocol_types = { workspace = true }
meloncraft_registry = { workspace = true }
meloncraft_text = { workspace = true }
