[package]
name = "meloncraft_default_commands"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
bevy = { workspace = true }
meloncraft_command = { workspace = true }
meloncraft_entity = { workspace = true }
meloncraft_player = { workspace = true }

[lints]
workspace = true
