[package]
name = "meloncraft_init_play"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
bevy = { workspace = true }
meloncraft_core = { workspace = true }
meloncraft_protocol_types = { workspace = true }
meloncraft_player = { workspace = true }
meloncraft_packets = { workspace = true }
meloncraft_client = { workspace = true }
meloncraft_entity = { workspace = true }
meloncraft_chunk = { workspace = true }
meloncraft_world = { workspace = true }
