[package]
name = "meloncraft_join"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
meloncraft_handshaking = { workspace = true }
meloncraft_login = { workspace = true }
meloncraft_packets = { workspace = true }
meloncraft_init_play = { workspace = true }

[lints]
workspace = true
