[package]
name = "meloncraft_network"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
bevy = { workspace = true }
lazy_static = { workspace = true }
meloncraft_protocol_types = { workspace = true }
meloncraft_client = { workspace = true }
meloncraft_packets = { workspace = true }

[lints]
workspace = true
