[package]
name = "meloncraft_packet_forwarding"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
meloncraft_block = { workspace = true }
meloncraft_packets = { workspace = true }
meloncraft_player = { workspace = true }
meloncraft_client = { workspace = true }
meloncraft_handshaking = { workspace = true }

[lints]
workspace = true
