[package]
name = "meloncraft_world_manager"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
bevy = { workspace = true }
meloncraft_block = { workspace = true }
meloncraft_player = { workspace = true }
meloncraft_entity = { workspace = true }
meloncraft_world = { workspace = true }
meloncraft_packets = { workspace = true }
meloncraft_protocol_types = { workspace = true }

[lints]
workspace = true
